HFP-113 Fixed some spacing for flashcard tip icon.

--- a/css/flashcards.css
+++ b/css/flashcards.css
@@ -368,12 +368,11 @@ button::-moz-focus-inner {
 
 .h5p-flashcards .joubel-tip-container {
   position: absolute;
-  right: 2em;
+  right: 2.3em;
   top: 1.5em;
 }
 
 .h5p-flashcards .joubel-icon-tip-normal {
   font-size: 1.3em;
   line-height: 1.8em;
-  padding-right: 2px;
 }
